spacing fixes

--- a/portfolio-website/src/components/HeroSection/HeroSection.module.css
+++ b/portfolio-website/src/components/HeroSection/HeroSection.module.css
@@ -46,9 +46,18 @@
   display: flex;
   width: 100%;
   min-height: 100vh;
-  padding: 5rem 5.55vw;
   justify-content: center;
-  /* background-image: var(--bg-heroSection); */
+
+  &.Desktop {
+    padding: 5rem;
+  }
+
+  &.Mobile {
+    padding: 4rem 
+    max(env(safe-area-inset-right), 0.8rem) 
+    4rem 
+    max(env(safe-area-inset-left), 0.8rem);
+  }
 }
 
 /**
@@ -60,7 +69,7 @@
   display: flex;
   width: 100%;
   max-width: 80rem; /* 1280px */
-  gap: 5%;
+  gap: 5rem;
   align-items: center;
 }
 
@@ -114,7 +123,13 @@
 .ctaMenu {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  &.Desktop {
+    gap: 1rem;
+  }
+
+  &.Mobile {
+    gap: 0.75rem
+  }
 }
 
 .ctaMenu .heroButton {
@@ -137,7 +152,6 @@
     width: 100%;
     min-height: 100vh;
     justify-content: center;
-    padding: 4rem 5.55vw;
   }
   
   /**
@@ -151,7 +165,7 @@
     justify-content: center;
     width: 100%;
     max-width: 40rem; /* 640px */
-    gap: 5%;
+    gap: 4rem;
     align-items: center;
   }
 
@@ -179,7 +193,13 @@
   .ctaMenu {
     flex-direction: column;
     align-items: stretch;
-    gap: 0.5rem;
+    &.Desktop {
+      gap: 0.5rem;
+    }
+  
+    &.Mobile {
+      gap: 0.375rem
+    }
   }
 
   .heroButton {
